# ziee

./: .dockerignore  .gitignore  .gitmodules  .syncpackrc.json  .syncpackrc.mjs  AUDIT-ROUND-1.md  AUDIT-ROUND-2.md  AUDIT-ROUND-3.md  AUDIT-ROUND-4.md  AUDIT-ROUND-5.md  AUDIT-ROUND-6.md  AUDIT-ROUND-7.md  AUDIT-ROUND-8.md  AUDIT-ROUND-9.md  CLAUDE.md  DEPLOY.md  DESIGN_SYSTEM.md  Dockerfile  MAC_OFFICE_BRIDGE_VERIFICATION.md  OFFICE_TOOL_SURFACE_DESIGN.md  WARNING_AUDIT.md  WINDOWS_PANE_VERIFICATION.md  chat-toolresult-pairing.STATUS.md  coder-sse-proxy.STATUS.md  config-as-code.STATUS.md  docker-compose.deploy.yml  docker-compose.deploy2.yml  docker-compose.external-db.yml  docker-compose.sandbox.yaml  docker-compose.yml  justfile  package-lock.json  package.json  resource-link-ssrf.STATUS.md  stale-artifact-links.STATUS.md  streaming-empty-notice-flicker.STATUS.md  tool-artifact-grouping.STATUS.md
postgres-dev/: Cargo.toml
postgres-dev/src/: config.rs  main.rs  postgres.rs
src-app/: .gitignore  Cargo.toml  docker-compose.prod.yaml  docker-compose.yaml  target
src-app/.cargo/: audit.toml  config.toml
src-app/agent-core/: Cargo.toml
src-app/agent-core/src/: budget.rs  compaction.rs  core.rs  core_tools.rs  extension.rs  fanout.rs  guard.rs  lib.rs  policy.rs  ports.rs  reviewer.rs  summarizer.rs  tasklist.rs  test_fakes.rs  tokens.rs  types.rs
src-app/agent-core/tests/: deps_boundary.rs  real_llm_loop.rs
src-app/ai-providers/: .gitignore  Cargo.toml
src-app/ai-providers/examples/: unified_api.rs
src-app/ai-providers/src/: error.rs  lib.rs  provider.rs  traits.rs
src-app/ai-providers/tests/: .env.test.example  TEST_COVERAGE.md  test_anthropic.rs  test_gemini.rs  test_openai.rs
src-app/desktop/: TESTING.md
src-app/desktop/tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-app/desktop/ui/: .gitignore  OVERRIDE_EXCEPTIONS.md  biome.json  gallery.config.json  index.html  package-lock.json  package.json  playwright.config.ts  playwright.gallery.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
src-app/llm-runtime/: .gitignore  Cargo.toml  config.example.yaml
src-app/llm-runtime/src/: binary.rs  binary_download.rs  config.rs  download.rs  error.rs  health.rs  lib.rs  runtime.rs  state.rs  supervisor.rs
src-app/llm-runtime/tests/: config_tests.rs  error_tests.rs  runtime_integration_tests.rs
src-app/sandbox-guest-agent/: Cargo.toml
src-app/sandbox-guest-agent/src/: main.rs
src-app/sandbox-rootfs/: Dockerfile  MACOS-RUNBOOK.md  README.md  RELEASE-RUNBOOK.md  build.sh  compat.toml  yanks.toml
src-app/sandbox-rootfs/ci/: publish.yml  reproducibility-check.sh  smoke-test.sh
src-app/sandbox-rootfs/pins/: apt-snapshot  package-lock.json  python-constraints.txt
src-app/sandbox-seccomp/: Cargo.toml
src-app/sandbox-seccomp/src/: lib.rs
src-app/sandbox-vm-launcher/: Cargo.toml  build.rs  entitlements.plist
src-app/sandbox-vm-launcher/src/: main.rs
src-app/sandbox-vm-launcher/tests/: boot_smoke.rs
src-app/sandbox-vm-protocol/: Cargo.toml
src-app/sandbox-vm-protocol/src/: lib.rs
src-app/server/: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile.prod  Dockerfile.sandbox  GEMINI_TOOL_CALLING_INVESTIGATION.md  GEMINI_TOOL_CALLING_INVESTIGATION_COMPLETE.md  README.md  build.rs  docker-compose.yaml  docker-entrypoint.sh  lib.rs  main.rs  pandoc.rs  pdfium.rs  target
src-app/server/.cargo/: config.toml
src-app/server/ai-providers/: Cargo.toml  GEMINI_FIXES_SUMMARY.md  GEMINI_IMPLEMENTATION_AUDIT.md  MODEL_TEST_COVERAGE.md  TEST_RECOMMENDATIONS.md
src-app/server/build_helper/: biomcp.rs  bun.rs  hub_seed.rs  llm_runtime.rs  pandoc.rs  pdfium.rs  pgvector.rs  sandbox_runtime.rs  typst.rs  uv.rs  worktree_db.rs  wsl2_agent.rs
src-app/server/common/: mod.rs  type.rs  types.rs
src-app/server/config/: .gitignore  dev-local.yaml  dev.example.yaml  dev.yaml  openapi-gen.yaml  prod.example.yaml
src-app/server/core/: app_builder.rs  app_state.rs  config.rs  events.rs  mod.rs
src-app/server/macros/: Cargo.toml  build.rs
src-app/server/migrations/: 00000000000002_create_llm_repositories_table.sql  00000000000003_create_llm_providers_table.sql  00000000000004_create_llm_models_tables.sql  00000000000005_create_download_instances_table.sql  00000000000006_create_assistants_table.sql  00000000000007_create_mcp_servers_tables.sql  00000000000008_create_hub_entities_table.sql  00000000000009_create_conversations_table.sql  00000000000009_migrate_existing_source_data.sql  00000000000010_create_branches_table.sql  00000000000010_remove_source_from_assistants.sql  00000000000011_create_messages_table.sql  00000000000011_remove_source_from_mcp_servers.sql  00000000000012_create_message_contents_table.sql  00000000000012_remove_source_from_llm_models.sql  00000000000013_refactor_messages_to_junction_table.sql  00000000000014_create_files_table.sql  00000000000015_create_llm_provider_files_table.sql  00000000000016_create_conversation_mcp_settings.sql  00000000000017_create_tool_use_approvals.sql  00000000000018_create_user_mcp_defaults.sql  (+145 more)
src-app/stub-engine/: Cargo.toml
src-app/stub-whisper-server/: Cargo.toml
src-app/ui/: .gitignore  TESTING_COMPONENT_SELECTORS.md  biome.json  components.json  docker-compose.test.yml  gallery.config.json  package-lock.json  package.json  playwright.config.ts  playwright.visual.config.ts  tailwind.config.js  test-api-manual.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
src-web/: Cargo.toml  build.rs  main.rs
src-web/common/: errors.rs  macros.rs  mod.rs  type.rs  types.rs
src-web/config/: dev.example.yaml
src-web/core/: app_builder.rs  config.rs  mod.rs
src-web/migrations/: 00000000000001_auth.sql  00000000000001_initial_schema.sql  00000000000002_create_llm_repositories_table.sql  00000000000002_user_group.sql  00000000000003_create_llm_providers_table.sql
src-web/module_api/: backend_module.rs
src-web/modules/: mod.rs
src-web/openapi/: mod.rs
src-web/tests/: integration_tests.rs
src-web/utils/: mod.rs
(+7354 files in other folders)
