[package]
name = "postgres-dev"
version = "0.1.0"
description = "PostgreSQL development helper for ziee-chat"
authors = ["Ziee Team"]
edition = "2021"

[[bin]]
name = "postgres-dev"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
