[workspace]
members = [
    "server",
    "ai-providers",
]

resolver = "2"

[workspace.dependencies]
# Common dependencies that all workspace members can use
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json"] }
