# Ziee Rust workspace.
#
# Single source of truth for shared dependency versions across all 9
# crates. Member crates inherit via `dep.workspace = true`. To bump a
# version, edit `[workspace.dependencies]` here — every member picks
# it up on the next `cargo build`.
#
# A unified `Cargo.lock` lives at this directory; per-crate lock files
# are obsolete (and ignored by cargo when a workspace lock exists).
#
# `resolver = "3"` is the modern feature resolver (default for
# edition 2024) — it eliminates the kind of feature-/version-split
# that bit us earlier when desktop's resolver picked sqlx 0.9 for
# pgvector while the rest of the tree stayed on 0.8.

[workspace]
resolver = "3"
members = [
    "server",
    "server/ai-providers",
    "server/macros",
    "desktop/tauri",
    "stub-engine",
    "sandbox-guest-agent",
    "sandbox-vm-launcher",
    "sandbox-vm-protocol",
    "sandbox-seccomp",
]

# Members that opt in via `field.workspace = true` inherit these.
# Leaving a member's own [package] field set overrides the workspace
# value, so this is opt-in (no surprise rewrites for legacy crates).
[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ziee Team"]
license = ""
repository = ""

# Shared dependency catalog. Members write `tokio.workspace = true` to
# inherit; to add EXTRA features beyond the baseline declared here,
# write `tokio = { workspace = true, features = ["test-util"] }` and
# cargo unions them.
#
# Rules of thumb:
#   - Pick the strictest version actually needed by any member, so the
#     resolver doesn't try to upgrade past it.
#   - Declare baseline features that ALL crates need. Member-specific
#     features go in the member's dep line (additive).
#   - `default-features = false` for reqwest, sigstore, ldap3 keeps
#     openssl out of the dep graph (rustls-only).
[workspace.dependencies]

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
# serde_yaml (dtolnay) is deprecated/archived; serde_norway is the maintained
# fork built on the same yaml-rust2 backend (behavior-identical drop-in).
serde_norway = "0.9"
toml = "0.8"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / web
# default-features = false keeps openssl out of the dep graph. Members
# that need extra capabilities (json, multipart, blocking, stream) add
# them on their own dep line.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
aide = { version = "0.15", features = ["axum", "axum-json", "axum-extra-json-deserializer", "axum-extra-query", "axum-extra", "axum-extra-headers", "axum-multipart", "axum-query", "macros", "redoc"] }
schemars = { version = "0.9.0", features = ["chrono04", "uuid1"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["cors", "timeout", "set-header"] }

# HTML extraction (web_search page fetch) — readability-style main-content
# extraction (dom_smoothie, a Mozilla Readability port) + HTML→markdown
# (htmd) to turn a fetched web page into clean, LLM-readable text.
dom_smoothie = "0.18"
htmd = "0.5"

# Database — keep version aligned across consumers so pgvector's
# `>= 0.8, < 0.10` constraint resolves to the same 0.8.x line that
# `HalfVector: sqlx::Type<Postgres>` impls were built against.
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }
pgvector = { version = "=0.4.1", features = ["postgres", "halfvec", "sqlx"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
portpicker = "0.1"

# Common utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }
dirs = "6.0.0"
rand = "0.9.2"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
semver = "1.0"
url = "2.5"
http = "1.2"
tempfile = "3.15"
mime_guess = "2.0"
which = "8.0.0"
tar = "0.4"
zstd = "0.13"
flate2 = "1.0"
zip = "6.0.0"
paste = "1.0"
once_cell = "1.21.3"
lazy_static = "1.4"
libc = "0.2"
include_dir = "0.7"

# Remote access tunnel — embedded ngrok client (Remote Access feature).
# `ngrok` provides the agent that connects to ngrok's edge from inside
# the desktop process and forwards traffic to the local backend; we
# wrap it behind the `TunnelDriver` trait in
# server/src/modules/remote_access/tunnel.rs so tests can substitute a
# `MockTunnelDriver` that needs no network.
ngrok = "0.14"

# Test infra
serial_test = "3.2"
mockall = "0.13"
