[package]
name = "ziee-chat"
version = "0.1.0"
description = "Ziee Chat"
authors = ["Ziee Team"]
license = ""
repository = ""
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["cors"] }
aide = { version = "0.15", features = ["axum", "axum-json", "axum-extra-json-deserializer", "axum-extra-query", "axum-extra", "axum-extra-headers", "axum-multipart", "axum-query", "macros", "redoc"] }
schemars = { version = "0.9.0", features = ["chrono04", "uuid1"] }
once_cell = "1.21.3"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
config = "0.15.18"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
portpicker = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
dirs = "6.0.0"
bcrypt = "0.17.1"
rand = "0.9.2"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "ziee-chat"
path = "main.rs"

[build-dependencies]
serde_yaml = "0.9"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.15"
serial_test = "3.2"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.18", features = ["v4"] }
rand = "0.9.2"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
