[package]
name = "ziee-chat"
version = "0.1.0"
description = "Ziee Chat"
authors = ["Ziee Team"]
license = ""
repository = ""
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["cors"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
axum-login = "0.18.0"
aide = { version = "0.15", features = ["axum", "axum-json", "axum-extra-json-deserializer", "axum-extra-query", "axum-extra", "axum-extra-headers", "axum-multipart", "axum-query", "macros", "redoc"] }
schemars = { version = "0.9.0", features = ["chrono04", "uuid1"] }
once_cell = "1.21.3"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
config = "0.15.18"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
portpicker = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.18", features = ["serde", "v4"] }
dirs = "6.0.0"
bcrypt = "0.17.1"
rand = "0.9.2"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"

# Git/LFS utilities
git2 = "0.19"
sha2 = "0.10"
url = "2.5"
http = "1.2"
tempfile = "3.15"

# Hardware monitoring
sysinfo = "0.30"
lazy_static = "1.4"
async-stream = "0.3"
futures-util = "0.3"
nvml-wrapper = { version = "0.11.0", optional = true }
opencl3 = { version = "0.12.0", optional = true }
ash = { version = "0.38", optional = true }
wgpu-hal = { version = "27.0.4", optional = true }

# Auth providers
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
ldap3 = "0.12.1"
oauth2 = "5.0.0"
openidconnect = "4.0.1"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "ziee-chat"
path = "main.rs"

[features]
default = ["gpu-detect"]
gpu-detect = ["nvml-wrapper", "opencl3", "ash", "wgpu-hal"]

[build-dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

[dev-dependencies]
mockall = "0.13"
tempfile = "3.15"
serial_test = "3.2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
uuid = { version = "1.18", features = ["v4"] }
rand = "0.9.2"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
testcontainers = "0.23"
