[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"
description = "ziee shared agent core — loop + ports + compaction/fan-out/reviewer (ziee-only, built on the SDK)"

[lints]
workspace = true

[dependencies]
# LLM provider abstraction + message/tool types (app-side, unchanged).
ai-providers = { path = "../server/ai-providers" }
# SDK platform: app-wide AppError/ApiResult + identity abstractions.
ziee-core = { path = "../../sdk/crates/ziee-core" }
ziee-identity = { path = "../../sdk/crates/ziee-identity" }

async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
