[package]
name = "llm-runtime"
version = "0.1.0"
description = "Standalone inference runtime for local LLM engines (LlamaCpp, MistralRS)"
authors = ["Ziee Team"]
edition = "2021"
license = "MIT"

[[bin]]
name = "llm-runtime"
path = "src/bin/llm-runtime.rs"
required-features = ["cli"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for health checks and downloads
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }

# Cryptography for checksum verification
sha2 = "0.10"

# Version resolution
semver = "1.0"

# System directories
dirs = "5.0"

# Port management
portpicker = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Binary discovery
which = "7.0"
glob = "0.3"

# CLI (optional)
clap = { version = "4.5", features = ["derive", "env", "string"], optional = true }

# State management
rusqlite = { version = "0.32", features = ["bundled"] }

# Progress bars for downloads
indicatif = "0.17"

# Binary extraction from archives
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# Engine binaries are downloaded from GitHub releases
# No local build dependencies needed

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

# Windows: minimal Win32 access (OpenProcess + GetExitCodeProcess) so
# `EngineProcess::is_running(&self)` can probe by PID without needing
# `&mut Child::try_wait()` — keeping the trait signature unchanged.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"
tokio-test = "0.4"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
name = "llm_runtime"
path = "src/lib.rs"
