[package]
name = "sandbox-guest-agent"
version = "0.1.0"
edition = "2021"
description = "In-VM init/agent for the code-sandbox microVM backend: mounts the rootfs, listens on vsock, runs the host-supplied bwrap argv, streams output back"
publish = false

[[bin]]
name = "ziee-sandbox-agent"
path = "src/main.rs"

[dependencies]
sandbox-vm-protocol = { path = "../sandbox-vm-protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "net", "time", "sync"] }
tokio-vsock = "0.7"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
