[package]
name = "ziee"
description = "Ziee Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local proc-macro crates
macros = { path = "./macros" }

# Inherited from workspace catalog — bumping happens in
# `src-app/Cargo.toml::[workspace.dependencies]`.
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
aide.workspace = true
schemars.workspace = true
once_cell.workspace = true
paste.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
async-stream.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
postgresql_embedded.workspace = true
portpicker.workspace = true
pgvector.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
rand.workspace = true
clap.workspace = true
hex.workspace = true
include_dir.workspace = true
base64.workspace = true
sha2.workspace = true
url.workspace = true
http.workspace = true
tempfile.workspace = true
mime_guess.workspace = true
which.workspace = true
include-flate.workspace = true
tar.workspace = true
zstd.workspace = true
lazy_static.workspace = true
futures-util.workspace = true
futures.workspace = true
# `json` (catch-all parser for SSE/REST) and `blocking` (used by the
# embedded-postgres startup probe) are added on top of the workspace's
# rustls-tls + charset + http2 baseline.
reqwest = { workspace = true, features = ["json", "blocking"] }

# Server-specific deps (not shared, kept local)
tower_governor = "0.7"
# tower-sessions is pulled transitively by axum-login. Direct declaration
# is redundant but currently load-bearing for sqlx's feature resolver
# (removing it makes sqlx prefer chrono::DateTime over
# time::OffsetDateTime as the timestamp type, which cascades into ~80
# type errors across repositories). Audit's 14-core F-07 marks both
# this and tower-sessions-sqlx-store as unused — they are at the
# source level, but the transitive feature contribution is real.
# A clean removal requires a coordinated `s/OffsetDateTime/DateTime<Utc>/`
# sweep across every repository; tracked as a follow-up.
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
axum-login = "0.18.0"
linkme = "0.3"
dashmap = "6"
config = "0.15.18"

# (ngrok dep moved to desktop/tauri/Cargo.toml — the remote_access
# module that uses it lives entirely in the desktop crate now.)

# Utilities
time = "0.3"
bcrypt = "0.17.1"

# Git/LFS utilities. `vendored-openssl` statically links openssl into
# the binary so a target machine doesn't need a system openssl dylib;
# `vendored-libgit2` does the same for libgit2 itself. Combined with
# the reqwest/ldap3/sigstore rustls switch below, the server binary
# has zero external TLS/crypto runtime deps.
git2 = { version = "0.20.2", default-features = false, features = ["https", "vendored-openssl", "vendored-libgit2"] }

# File processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
encoding_rs = "0.8"
pdfium-render = "0.8"
pdf-extract = "0.10.0"
calamine = "0.31.0"
# Zip walker for decompression-bomb pre-validation on OOXML files
# (DOCX/XLSX/PPTX). See modules/file/utils/zipbomb. Closes 05-file F-05.
zip = "6.0.0"

# Hardware monitoring
sysinfo = "0.37.2"
nvml-wrapper = { version = "0.11.0", optional = true }
opencl3 = { version = "0.12.0", optional = true }
ash = { version = "0.38", optional = true }
wgpu-hal = { version = "27.0.4", optional = true }

# Auth providers
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
# `sync` dropped: callers use LdapConnAsync exclusively. `tls-rustls-ring`
# brings the ring crypto provider explicitly (without it the rustls
# default-provider runtime check fails on first connect).
ldap3 = { version = "0.12.1", default-features = false, features = ["tls-rustls-ring"] }
oauth2 = "5.0.0"
openidconnect = "4.0.1"
sigstore = { version = "0.13", default-features = false, features = ["bundle", "sigstore-trust-root", "rustls-tls"] }

# AI providers (local package)
ai-providers = { path = "./ai-providers" }

# LLM runtime for local model deployment
llm-runtime = { path = "../llm-runtime" }

# Host<->guest sandbox VM protocol. Used by the macOS/Windows microVM
# backends but unconditional because the host-side `LongLivedSession`
# type (in `backend/vm_long_lived.rs`) needs the protocol types on
# every OS so `SandboxBackend::open_long_lived_session` has a uniform
# return signature across platforms (the Linux impl just returns
# `Ok(None)`). The crate is pure-Rust serde glue with no
# platform-specific code, so shipping it on Linux is free.
sandbox-vm-protocol = { path = "../sandbox-vm-protocol" }

# MCP client
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }
eventsource-client = "0.12"

[lib]
name = "ziee"
path = "src/lib.rs"

[[bin]]
name = "ziee"
path = "src/main.rs"

[[example]]
name = "mock-sampling-server"
path = "tests/mcp/examples/mock_sampling_server.rs"

[features]
# `code_sandbox_seccomp` is on by default. The `sandbox-seccomp` dep
# (which links `libseccomp`) is target-conditional (Linux-only — see
# `[target.…]` below), so non-Linux builds resolve the feature to a no-op
# and the `#[cfg(all(feature = "…", target_os = "linux"))]`-gated code path
# simply isn't compiled. Operators get the syscall-level defense-in-depth
# out of the box on Linux without flipping any build flag; Mac/Windows
# builds compile cleanly with no manual `--no-default-features` dance.
# The seccomp policy itself lives in the shared `sandbox-seccomp` crate so
# the in-VM guest agent applies an identical filter.
default = ["gpu-detect", "code_sandbox_seccomp"]
gpu-detect = ["nvml-wrapper", "opencl3", "ash", "wgpu-hal"]
code_sandbox_seccomp = ["dep:sandbox-seccomp"]

# Linux-only deps. `libseccomp` is `optional = true` so the feature
# machinery (`dep:libseccomp`) above can still reference it; on
# Mac/Windows, the dep is target-skipped and the feature flag
# becomes inert (the seccomp module gates on `target_os = "linux"`
# in addition to the feature).
[target.'cfg(target_os = "linux")'.dependencies]
sandbox-seccomp = { path = "../sandbox-seccomp", optional = true }


# Windows: AF_HYPERV / SOCKADDR_HV bindings so the WSL2 backend can dial the
# in-distro agent over the Hyper-V vsock instead of `127.0.0.1` — closing the
# cross-distro reachability gap (HIGH-1 of .sec-audits/wsl2-source-deep-read-).
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
] }

[build-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sqlx.workspace = true
ureq = "3.1.4"
zip.workspace = true
flate2.workspace = true
tar.workspace = true
# zstd for the mac sandbox-runtime bundle (level-19 compression).
zstd.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
serial_test.workspace = true
# Tests need `cookies` (browser-like session round-trips) on top of the
# workspace baseline (rustls-tls + charset + http2) plus `json` +
# `multipart` for request bodies.
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }
uuid.workspace = true
rand.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
postgresql_embedded.workspace = true
testcontainers = "0.25.2"
wiremock = "0.6"
rsa = { version = "0.9", features = ["pem"] }
