[package]
name = "ziee"
description = "Ziee Server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local proc-macro crates
macros = { path = "./macros" }

# Lexical search for the files MCP grep tool (already in the lockfile transitively).
regex = "1"

# Inherited from workspace catalog — bumping happens in
# `src-app/Cargo.toml::[workspace.dependencies]`.
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
aide.workspace = true
schemars.workspace = true
once_cell.workspace = true
paste.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
async-stream.workspace = true
serde_norway.workspace = true
sqlx.workspace = true
postgresql_embedded.workspace = true
portpicker.workspace = true
pgvector.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
rand.workspace = true
clap.workspace = true
hex.workspace = true
include_dir.workspace = true
base64.workspace = true
sha2.workspace = true
semver.workspace = true
url.workspace = true
http.workspace = true
tempfile.workspace = true
mime_guess.workspace = true
which.workspace = true
tar.workspace = true
# Engine-binary archive extraction (folded in from the llm-runtime crate's
# binary downloader): tar.gz via flate2 + zip for the Windows path. Also
# used by the hub catalog tarball unpack (modules/hub/hub_manager.rs).
flate2.workspace = true
zstd.workspace = true
lazy_static.workspace = true
futures-util.workspace = true
futures.workspace = true
# `json` (catch-all parser for SSE/REST) and `blocking` (used by the
# embedded-postgres startup probe) are added on top of the workspace's
# rustls-tls + charset + http2 baseline.
reqwest = { workspace = true, features = ["json", "blocking", "stream"] }
# web_search page fetch: readability-style extraction + HTML→markdown.
dom_smoothie.workspace = true
htmd.workspace = true
# lit_search: parse arXiv's Atom XML feed (already in the lock, transitive).
quick-xml = "0.37"

# Server-specific deps (not shared, kept local)
tower_governor = "0.7"
# tower-sessions is pulled transitively by axum-login. Direct declaration
# is redundant but currently load-bearing for sqlx's feature resolver
# (removing it makes sqlx prefer chrono::DateTime over
# time::OffsetDateTime as the timestamp type, which cascades into ~80
# type errors across repositories). Audit's 14-core F-07 marks both
# this and tower-sessions-sqlx-store as unused — they are at the
# source level, but the transitive feature contribution is real.
# A clean removal requires a coordinated `s/OffsetDateTime/DateTime<Utc>/`
# sweep across every repository; tracked as a follow-up.
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
axum-login = "0.18.0"
linkme = "0.3"
dashmap = "6"
config = "0.15.18"

# (ngrok dep moved to desktop/tauri/Cargo.toml — the remote_access
# module that uses it lives entirely in the desktop crate now.)

# Utilities
time = "0.3"
bcrypt = "0.17.1"

# Git/LFS utilities. `vendored-openssl` statically links openssl into
# the binary so a target machine doesn't need a system openssl dylib;
# `vendored-libgit2` does the same for libgit2 itself. Combined with
# the reqwest/ldap3/sigstore rustls switch below, the server binary
# has zero external TLS/crypto runtime deps.
git2 = { version = "0.20.2", default-features = false, features = ["https", "vendored-openssl", "vendored-libgit2"] }

# File processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
encoding_rs = "0.8"
pdfium-render = "0.8"
pdf-extract = "0.10.0"
calamine = "0.31.0"
# Zip walker for decompression-bomb pre-validation on OOXML files
# (DOCX/XLSX/PPTX). See modules/file/utils/zipbomb. Closes 05-file F-05.
zip = "6.0.0"

# Hardware monitoring
sysinfo = "0.37.2"
nvml-wrapper = { version = "0.11.0", optional = true }
opencl3 = { version = "0.12.0", optional = true }
ash = { version = "0.38", optional = true }
wgpu-hal = { version = "27.0.4", optional = true }

# Auth providers
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
# `sync` dropped: callers use LdapConnAsync exclusively. `tls-rustls-ring`
# brings the ring crypto provider explicitly (without it the rustls
# default-provider runtime check fails on first connect).
ldap3 = { version = "0.12.1", default-features = false, features = ["tls-rustls-ring"] }
oauth2 = "5.0.0"
openidconnect = "4.0.1"
sigstore = { version = "0.14", default-features = false, features = ["bundle", "sigstore-trust-root", "rustls-tls"] }

# AI providers (local package)
ai-providers = { path = "./ai-providers" }

# MCP client
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }
eventsource-client = "0.12"
# E5: full JSON-Schema validation of elicit submissions. default-features off
# drops the remote-`$ref` HTTP/file resolvers (no SSRF surface during form
# validation) — elicit schemas are self-contained.
jsonschema = { version = "0.46.5", default-features = false }

[lib]
name = "ziee"
path = "src/lib.rs"

[[bin]]
name = "ziee"
path = "src/main.rs"

[[example]]
name = "mock-sampling-server"
path = "tests/mcp/examples/mock_sampling_server.rs"

[features]
# `code_sandbox_seccomp` is on by default. The `sandbox-seccomp` dep
# (which links `libseccomp`) is target-conditional (Linux-only — see
# `[target.…]` below), so non-Linux builds resolve the feature to a no-op
# and the `#[cfg(all(feature = "…", target_os = "linux"))]`-gated code path
# simply isn't compiled. Operators get the syscall-level defense-in-depth
# out of the box on Linux without flipping any build flag; Mac/Windows
# builds compile cleanly with no manual `--no-default-features` dance.
# The seccomp policy itself lives in the shared `sandbox-seccomp` crate so
# the in-VM guest agent applies an identical filter.
default = ["gpu-detect", "code_sandbox_seccomp"]
gpu-detect = ["nvml-wrapper", "opencl3", "ash", "wgpu-hal"]
code_sandbox_seccomp = ["dep:sandbox-seccomp"]

# Linux-only deps. `libseccomp` is `optional = true` so the feature
# machinery (`dep:libseccomp`) above can still reference it; on
# Mac/Windows, the dep is target-skipped and the feature flag
# becomes inert (the seccomp module gates on `target_os = "linux"`
# in addition to the feature).
[target.'cfg(target_os = "linux")'.dependencies]
sandbox-seccomp = { path = "../sandbox-seccomp", optional = true }

# The microVM code-sandbox backends (macOS libkrun, Windows WSL2) talk to the
# in-guest agent over this shared control protocol. The protocol types are ALSO
# compiled on Linux — `backend/vm_long_lived` is intentionally not platform-gated
# (it needs to exist on Linux for a uniform `SandboxBackend` return signature),
# and it imports `sandbox_vm_protocol` unconditionally. So the dep must resolve
# on every supported OS, not just macOS/Windows. (This was a latent main bug:
# no CI `cargo build`s the server on Linux, so the macOS/Windows-only
# declaration never failed to compile.)
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
sandbox-vm-protocol = { path = "../sandbox-vm-protocol" }

# Windows: AF_HYPERV / SOCKADDR_HV bindings so the WSL2 backend can dial the
# in-distro agent over the Hyper-V vsock instead of `127.0.0.1` — closing the
# cross-distro reachability gap (HIGH-1 of .sec-audits/wsl2-source-deep-read-).
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    # Named-pipe IPC for the LocalSystem sandbox-helper service: create the
    # pipe with an SDDL security descriptor (Authorization), accept/connect
    # (Pipes), and the backing file handle (Storage_FileSystem).
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    # ConnectNamedPipe's signature references OVERLAPPED, so windows-sys gates
    # it behind the IO feature too.
    "Win32_System_IO",
] }
# Windows service scaffolding for the LocalSystem sandbox-helper: SCM
# dispatcher + install/uninstall. The helper resolves the WSL utility VM's
# VmId (needs Hyper-V Admin / SYSTEM) and registers the vsock GUIDs (HKLM
# write) so the unprivileged server never needs those rights — mirrors how
# Docker Desktop brokers privileged WSL work through a LocalSystem service.
windows-service = "0.7"
# Safe HKLM access for the GuestCommunicationServices vsock-port registration.
winreg = "0.52"

[build-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
sqlx.workspace = true
ureq = "3.1.4"
zip.workspace = true
flate2.workspace = true
tar.workspace = true
# zstd for the mac sandbox-runtime bundle (level-19 compression).
zstd.workspace = true
# Pure-Rust XZ decoder for the typst binary archives. typst publishes
# Linux/macOS releases as .tar.xz (Windows is .zip). lzma-rs is pure
# Rust so the build doesn't gain a system xz-utils dependency.
lzma-rs = "0.3"
# Build-time fetch + verification of the ziee-ai/hub catalog
# (see build_helper/hub_seed.rs). Same `sigstore` feature set as
# the runtime crate so the build-time cosign chain matches the
# runtime refresh chain bit-for-bit. `sha2`/`serde`/`serde_json`
# are needed for the sha256 sidecar check + GhRelease JSON parsing.
# `fs2` provides the cross-process advisory lock that serializes
# concurrent cargo builds racing to rotate the seed cache.
sigstore = { version = "0.14", default-features = false, features = ["bundle", "sigstore-trust-root", "rustls-tls"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
serial_test.workspace = true
# Test fixtures build a .tar.gz on the fly (MockReleaseServer packaging the
# stub-engine as a release artifact). `tar`, `sha2`, `hex` are already in the
# main [dependencies]; flate2 is only a build-dependency, so re-declare it here.
flate2.workspace = true
# Tests need `cookies` (browser-like session round-trips) on top of the
# workspace baseline (rustls-tls + charset + http2) plus `json` +
# `multipart` for request bodies.
reqwest = { workspace = true, features = ["json", "cookies", "multipart", "blocking"] }
uuid.workspace = true
rand.workspace = true
serde_norway.workspace = true
sqlx.workspace = true
postgresql_embedded.workspace = true
testcontainers = "0.25.2"
wiremock = "0.6"
rsa = { version = "0.9", features = ["pem"] }
